Changes done on configs but not working yet

--- a/network/organizations/fabric-ca/ordererUA/fabric-ca-server-config.yaml
+++ b/network/organizations/fabric-ca/ordererUA/fabric-ca-server-config.yaml
@@ -308,7 +308,7 @@ signing:
 #     CA certificates though it can still issue end entity certificates.
 ###########################################################################
 csr:
-  cn: ua.orderer.bcfm.com
+  cn: orderer.bcfm.com
   names:
     - C: US
       ST: "New York"
