--- a/network/docker/docker-compose-cli.yaml
+++ b/network/docker/docker-compose-cli.yaml
@@ -1,12 +1,12 @@
 version: "3"
 
 networks:
-  test:
+  bcfm:
     external:
-      name: test
+      name: bcfm
 
 services:
-  cliOrg1:
+  cliUa:
     container_name: cli
     image: hyperledger/fabric-tools:2.3
     tty: true
@@ -20,33 +20,33 @@ services:
       - GOPATH=/opt/gopath
       - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
       - FABRIC_LOGGING_SPEC=DEBUG
-      - ORDERER_CA=/opt/gopath/src/github.com/hyperledger/fabric/peer/organizations/ordererOrganizations/example.com/orderers/orderer.example.com/msp/tlscacerts/tlsca.example.com-cert.pem
+      - ORDERER_CA=/opt/gopath/src/github.com/hyperledger/fabric/peer/organizations/ordererOrganizations/bcfm.com/orderers/orderer.bcfm.com/msp/tlscacerts/tlsca.bcfm.com-cert.pem
       # - FABRIC_LOGGING_SPEC=INFO
       - CC_PATH=/opt/gopath/src/github.com/chaincode
-      - CORE_VM_DOCKER_HOSTCONFIG_NETWORKMODE=test
+      - CORE_VM_DOCKER_HOSTCONFIG_NETWORKMODE=bcfm
       - CORE_PEER_ID=cli
-      - CORE_PEER_ADDRESS=peer0.org1.example.com:7051
-      - CORE_PEER_LOCALMSPID=Org1MSP
+      - CORE_PEER_ADDRESS=peer0.ua.bcfm.com:7051
+      - CORE_PEER_LOCALMSPID=UaMSP
       - CORE_PEER_TLS_ENABLED=true
-      - CORE_PEER_TLS_CERT_FILE=/opt/gopath/src/github.com/hyperledger/fabric/peer/organizations/peerOrganizations/org1.example.com/peers/peer0.org1.example.com/tls/server.crt
-      - CORE_PEER_TLS_KEY_FILE=/opt/gopath/src/github.com/hyperledger/fabric/peer/organizations/peerOrganizations/org1.example.com/peers/peer0.org1.example.com/tls/server.key
-      - CORE_PEER_TLS_ROOTCERT_FILE=/opt/gopath/src/github.com/hyperledger/fabric/peer/organizations/peerOrganizations/org1.example.com/peers/peer0.org1.example.com/tls/ca.crt
-      - CORE_PEER_MSPCONFIGPATH=/opt/gopath/src/github.com/hyperledger/fabric/peer/organizations/peerOrganizations/org1.example.com/users/Admin@org1.example.com/msp
+      - CORE_PEER_TLS_CERT_FILE=/opt/gopath/src/github.com/hyperledger/fabric/peer/organizations/peerOrganizations/ua.bcfm.com/peers/peer0.ua.bcfm.com/tls/server.crt
+      - CORE_PEER_TLS_KEY_FILE=/opt/gopath/src/github.com/hyperledger/fabric/peer/organizations/peerOrganizations/ua.bcfm.com/peers/peer0.ua.bcfm.com/tls/server.key
+      - CORE_PEER_TLS_ROOTCERT_FILE=/opt/gopath/src/github.com/hyperledger/fabric/peer/organizations/peerOrganizations/ua.bcfm.com/peers/peer0.ua.bcfm.com/tls/ca.crt
+      - CORE_PEER_MSPCONFIGPATH=/opt/gopath/src/github.com/hyperledger/fabric/peer/organizations/peerOrganizations/ua.bcfm.com/users/Admin@ua.bcfm.com/msp
     working_dir: /opt/gopath/src/github.com/hyperledger/fabric/peer
     command: /bin/bash
     volumes:
       - /var/run/:/host/var/run/
-      - /home/ubuntu/hlf-docker-swarm/chaincode/:/opt/gopath/src/github.com/chaincode
-      - /home/ubuntu/hlf-docker-swarm/test-network/organizations:/opt/gopath/src/github.com/hyperledger/fabric/peer/organizations/
-      - /home/ubuntu/hlf-docker-swarm/test-network/scripts:/opt/gopath/src/github.com/hyperledger/fabric/peer/scripts/
-      - /home/ubuntu/hlf-docker-swarm/test-network/channel-artifacts:/opt/gopath/src/github.com/hyperledger/fabric/peer/channel-artifacts
+      - /home/ubuntu/BlockchainFarmManager/BCFM-UA/chaincode/:/opt/gopath/src/github.com/chaincode
+      - /home/ubuntu/BlockchainFarmManager/BCFM-UA/network/organizations:/opt/gopath/src/github.com/hyperledger/fabric/peer/organizations/
+      - /home/ubuntu/BlockchainFarmManager/BCFM-UA/network/scripts:/opt/gopath/src/github.com/hyperledger/fabric/peer/scripts/
+      - /home/ubuntu/BlockchainFarmManager/BCFM-UA/network/channel-artifacts:/opt/gopath/src/github.com/hyperledger/fabric/peer/channel-artifacts
     
     networks:
-      test:
+      bcfm:
         aliases:
-          - cliOrg1.example.com
+          - cliUa.bcfm.com
 
-  cliOrg2:
+  cliTransport:
     container_name: cli
     image: hyperledger/fabric-tools:2.3
     tty: true
@@ -54,38 +54,38 @@ services:
     deploy:
       placement:
         constraints:
-          - node.labels.name == worker1
+          - node.labels.name == manager
     environment:
       - SYS_CHANNEL=system-channel
       - GOPATH=/opt/gopath
       - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
       - FABRIC_LOGGING_SPEC=DEBUG
-      - ORDERER_CA=/opt/gopath/src/github.com/hyperledger/fabric/peer/organizations/ordererOrganizations/example.com/orderers/orderer.example.com/msp/tlscacerts/tlsca.example.com-cert.pem
+      - ORDERER_CA=/opt/gopath/src/github.com/hyperledger/fabric/peer/organizations/ordererOrganizations/bcfm.com/orderers/orderer.bcfm.com/msp/tlscacerts/tlsca.bcfm.com-cert.pem
       # - FABRIC_LOGGING_SPEC=INFO
       - CC_PATH=/opt/gopath/src/github.com/chaincode
-      - CORE_VM_DOCKER_HOSTCONFIG_NETWORKMODE=test
+      - CORE_VM_DOCKER_HOSTCONFIG_NETWORKMODE=bcfm
       - CORE_PEER_ID=cli
-      - CORE_PEER_ADDRESS=peer0.org2.example.com:9051
-      - CORE_PEER_LOCALMSPID=Org2MSP
+      - CORE_PEER_ADDRESS=peer0.transport.bcfm.com:9051
+      - CORE_PEER_LOCALMSPID=TransportMSP
       - CORE_PEER_TLS_ENABLED=true
-      - CORE_PEER_TLS_CERT_FILE=/opt/gopath/src/github.com/hyperledger/fabric/peer/organizations/peerOrganizations/org2.example.com/peers/peer0.org2.example.com/tls/server.crt
-      - CORE_PEER_TLS_KEY_FILE=/opt/gopath/src/github.com/hyperledger/fabric/peer/organizations/peerOrganizations/org2.example.com/peers/peer0.org2.example.com/tls/server.key
-      - CORE_PEER_TLS_ROOTCERT_FILE=/opt/gopath/src/github.com/hyperledger/fabric/peer/organizations/peerOrganizations/org2.example.com/peers/peer0.org2.example.com/tls/ca.crt
-      - CORE_PEER_MSPCONFIGPATH=/opt/gopath/src/github.com/hyperledger/fabric/peer/organizations/peerOrganizations/org2.example.com/users/Admin@org2.example.com/msp
+      - CORE_PEER_TLS_CERT_FILE=/opt/gopath/src/github.com/hyperledger/fabric/peer/organizations/peerOrganizations/transport.bcfm.com/peers/peer0.transport.bcfm.com/tls/server.crt
+      - CORE_PEER_TLS_KEY_FILE=/opt/gopath/src/github.com/hyperledger/fabric/peer/organizations/peerOrganizations/transport.bcfm.com/peers/peer0.transport.bcfm.com/tls/server.key
+      - CORE_PEER_TLS_ROOTCERT_FILE=/opt/gopath/src/github.com/hyperledger/fabric/peer/organizations/peerOrganizations/transport.bcfm.com/peers/peer0.transport.bcfm.com/tls/ca.crt
+      - CORE_PEER_MSPCONFIGPATH=/opt/gopath/src/github.com/hyperledger/fabric/peer/organizations/peerOrganizations/transport.bcfm.com/users/Admin@transport.bcfm.com/msp
     working_dir: /opt/gopath/src/github.com/hyperledger/fabric/peer
     command: /bin/bash
     volumes:
       - /var/run/:/host/var/run/
-      - /home/ubuntu/hlf-docker-swarm/chaincode/:/opt/gopath/src/github.com/chaincode
-      - /home/ubuntu/hlf-docker-swarm/test-network/organizations:/opt/gopath/src/github.com/hyperledger/fabric/peer/organizations/
-      - /home/ubuntu/hlf-docker-swarm/test-network/scripts:/opt/gopath/src/github.com/hyperledger/fabric/peer/scripts/
-      - /home/ubuntu/hlf-docker-swarm/test-network/channel-artifacts:/opt/gopath/src/github.com/hyperledger/fabric/peer/channel-artifacts
+      - /home/ubuntu/BlockchainFarmManager/BCFM-UA/chaincode/:/opt/gopath/src/github.com/chaincode
+      - /home/ubuntu/BlockchainFarmManager/BCFM-UA/network/organizations:/opt/gopath/src/github.com/hyperledger/fabric/peer/organizations/
+      - /home/ubuntu/BlockchainFarmManager/BCFM-UA/network/scripts:/opt/gopath/src/github.com/hyperledger/fabric/peer/scripts/
+      - /home/ubuntu/BlockchainFarmManager/BCFM-UA/network/channel-artifacts:/opt/gopath/src/github.com/hyperledger/fabric/peer/channel-artifacts
     networks:
-      test:
+      bcfm:
         aliases:
-          - cliOrg2.example.com
+          - clitransport.bcfm.com
 
-  cliOrg3:
+  cliProvider:
     container_name: cli
     image: hyperledger/fabric-tools:2.3
     tty: true
@@ -93,33 +93,150 @@ services:
     deploy:
       placement:
         constraints:
-          - node.labels.name == worker2
+          - node.labels.name == manager
     environment:
       - SYS_CHANNEL=system-channel
       - GOPATH=/opt/gopath
       - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
       - FABRIC_LOGGING_SPEC=DEBUG
-      - ORDERER_CA=/opt/gopath/src/github.com/hyperledger/fabric/peer/organizations/ordererOrganizations/example.com/orderers/orderer.example.com/msp/tlscacerts/tlsca.example.com-cert.pem
+      - ORDERER_CA=/opt/gopath/src/github.com/hyperledger/fabric/peer/organizations/ordererOrganizations/bcfm.com/orderers/orderer.bcfm.com/msp/tlscacerts/tlsca.bcfm.com-cert.pem
       # - FABRIC_LOGGING_SPEC=INFO
       - CC_PATH=/opt/gopath/src/github.com/chaincode
-      - CORE_VM_DOCKER_HOSTCONFIG_NETWORKMODE=test
+      - CORE_VM_DOCKER_HOSTCONFIG_NETWORKMODE=bcfm
       - CORE_PEER_ID=cli
-      - CORE_PEER_ADDRESS=peer0.org3.example.com:11051
-      - CORE_PEER_LOCALMSPID=Org3MSP
+      - CORE_PEER_ADDRESS=peer0.provider.bcfm.com:11051
+      - CORE_PEER_LOCALMSPID=ProviderMSP
       - CORE_PEER_TLS_ENABLED=true
-      - CORE_PEER_TLS_CERT_FILE=/opt/gopath/src/github.com/hyperledger/fabric/peer/organizations/peerOrganizations/org3.example.com/peers/peer0.org3.example.com/tls/server.crt
-      - CORE_PEER_TLS_KEY_FILE=/opt/gopath/src/github.com/hyperledger/fabric/peer/organizations/peerOrganizations/org3.example.com/peers/peer0.org3.example.com/tls/server.key
-      - CORE_PEER_TLS_ROOTCERT_FILE=/opt/gopath/src/github.com/hyperledger/fabric/peer/organizations/peerOrganizations/org3.example.com/peers/peer0.org3.example.com/tls/ca.crt
-      - CORE_PEER_MSPCONFIGPATH=/opt/gopath/src/github.com/hyperledger/fabric/peer/organizations/peerOrganizations/org3.example.com/users/Admin@org3.example.com/msp
+      - CORE_PEER_TLS_CERT_FILE=/opt/gopath/src/github.com/hyperledger/fabric/peer/organizations/peerOrganizations/provider.bcfm.com/peers/peer0.provider.bcfm.com/tls/server.crt
+      - CORE_PEER_TLS_KEY_FILE=/opt/gopath/src/github.com/hyperledger/fabric/peer/organizations/peerOrganizations/provider.bcfm.com/peers/peer0.provider.bcfm.com/tls/server.key
+      - CORE_PEER_TLS_ROOTCERT_FILE=/opt/gopath/src/github.com/hyperledger/fabric/peer/organizations/peerOrganizations/provider.bcfm.com/peers/peer0.provider.bcfm.com/tls/ca.crt
+      - CORE_PEER_MSPCONFIGPATH=/opt/gopath/src/github.com/hyperledger/fabric/peer/organizations/peerOrganizations/provider.bcfm.com/users/Admin@provider.bcfm.com/msp
     working_dir: /opt/gopath/src/github.com/hyperledger/fabric/peer
     command: /bin/bash
     volumes:
       - /var/run/:/host/var/run/
-      - /home/ubuntu/hlf-docker-swarm/chaincode/:/opt/gopath/src/github.com/chaincode
-      - /home/ubuntu/hlf-docker-swarm/test-network/organizations:/opt/gopath/src/github.com/hyperledger/fabric/peer/organizations/
-      - /home/ubuntu/hlf-docker-swarm/test-network/scripts:/opt/gopath/src/github.com/hyperledger/fabric/peer/scripts/
-      - /home/ubuntu/hlf-docker-swarm/test-network/channel-artifacts:/opt/gopath/src/github.com/hyperledger/fabric/peer/channel-artifacts
+      - /home/ubuntu/BlockchainFarmManager/BCFM-UA/chaincode/:/opt/gopath/src/github.com/chaincode
+      - /home/ubuntu/BlockchainFarmManager/BCFM-UA/network/organizations:/opt/gopath/src/github.com/hyperledger/fabric/peer/organizations/
+      - /home/ubuntu/BlockchainFarmManager/BCFM-UA/network/scripts:/opt/gopath/src/github.com/hyperledger/fabric/peer/scripts/
+      - /home/ubuntu/BlockchainFarmManager/BCFM-UA/network/channel-artifacts:/opt/gopath/src/github.com/hyperledger/fabric/peer/channel-artifacts
     networks:
-      test:
+      bcfm:
         aliases:
-          - cliOrg3.example.com
+          - cliprovider.bcfm.com
+
+  cliProducer:
+    container_name: cli
+    image: hyperledger/fabric-tools:2.3
+    tty: true
+    stdin_open: true
+    deploy:
+      placement:
+        constraints:
+          - node.labels.name == manager
+    environment:
+      - SYS_CHANNEL=system-channel
+      - GOPATH=/opt/gopath
+      - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
+      - FABRIC_LOGGING_SPEC=DEBUG
+      - ORDERER_CA=/opt/gopath/src/github.com/hyperledger/fabric/peer/organizations/ordererOrganizations/bcfm.com/orderers/orderer.bcfm.com/msp/tlscacerts/tlsca.bcfm.com-cert.pem
+      # - FABRIC_LOGGING_SPEC=INFO
+      - CC_PATH=/opt/gopath/src/github.com/chaincode
+      - CORE_VM_DOCKER_HOSTCONFIG_NETWORKMODE=bcfm
+      - CORE_PEER_ID=cli
+      - CORE_PEER_ADDRESS=peer0.producer.bcfm.com:12051
+      - CORE_PEER_LOCALMSPID=ProducerMSP
+      - CORE_PEER_TLS_ENABLED=true
+      - CORE_PEER_TLS_CERT_FILE=/opt/gopath/src/github.com/hyperledger/fabric/peer/organizations/peerOrganizations/producer.bcfm.com/peers/peer0.producer.bcfm.com/tls/server.crt
+      - CORE_PEER_TLS_KEY_FILE=/opt/gopath/src/github.com/hyperledger/fabric/peer/organizations/peerOrganizations/producer.bcfm.com/peers/peer0.producer.bcfm.com/tls/server.key
+      - CORE_PEER_TLS_ROOTCERT_FILE=/opt/gopath/src/github.com/hyperledger/fabric/peer/organizations/peerOrganizations/producer.bcfm.com/peers/peer0.producer.bcfm.com/tls/ca.crt
+      - CORE_PEER_MSPCONFIGPATH=/opt/gopath/src/github.com/hyperledger/fabric/peer/organizations/peerOrganizations/producer.bcfm.com/users/Admin@producer.bcfm.com/msp
+    working_dir: /opt/gopath/src/github.com/hyperledger/fabric/peer
+    command: /bin/bash
+    volumes:
+      - /var/run/:/host/var/run/
+      - /home/ubuntu/BlockchainFarmManager/BCFM-UA/chaincode/:/opt/gopath/src/github.com/chaincode
+      - /home/ubuntu/BlockchainFarmManager/BCFM-UA/network/organizations:/opt/gopath/src/github.com/hyperledger/fabric/peer/organizations/
+      - /home/ubuntu/BlockchainFarmManager/BCFM-UA/network/scripts:/opt/gopath/src/github.com/hyperledger/fabric/peer/scripts/
+      - /home/ubuntu/BlockchainFarmManager/BCFM-UA/network/channel-artifacts:/opt/gopath/src/github.com/hyperledger/fabric/peer/channel-artifacts
+    networks:
+      bcfm:
+        aliases:
+          - cliproducer.bcfm.com
+
+  cliFarmacy:
+    container_name: cli
+    image: hyperledger/fabric-tools:2.3
+    tty: true
+    stdin_open: true
+    deploy:
+      placement:
+        constraints:
+          - node.labels.name == manager
+    environment:
+      - SYS_CHANNEL=system-channel
+      - GOPATH=/opt/gopath
+      - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
+      - FABRIC_LOGGING_SPEC=DEBUG
+      - ORDERER_CA=/opt/gopath/src/github.com/hyperledger/fabric/peer/organizations/ordererOrganizations/bcfm.com/orderers/orderer.bcfm.com/msp/tlscacerts/tlsca.bcfm.com-cert.pem
+      # - FABRIC_LOGGING_SPEC=INFO
+      - CC_PATH=/opt/gopath/src/github.com/chaincode
+      - CORE_VM_DOCKER_HOSTCONFIG_NETWORKMODE=bcfm
+      - CORE_PEER_ID=cli
+      - CORE_PEER_ADDRESS=peer0.farmacy.bcfm.com:13051
+      - CORE_PEER_LOCALMSPID=FarmacyMSP
+      - CORE_PEER_TLS_ENABLED=true
+      - CORE_PEER_TLS_CERT_FILE=/opt/gopath/src/github.com/hyperledger/fabric/peer/organizations/peerOrganizations/farmacy.bcfm.com/peers/peer0.farmacy.bcfm.com/tls/server.crt
+      - CORE_PEER_TLS_KEY_FILE=/opt/gopath/src/github.com/hyperledger/fabric/peer/organizations/peerOrganizations/farmacy.bcfm.com/peers/peer0.farmacy.bcfm.com/tls/server.key
+      - CORE_PEER_TLS_ROOTCERT_FILE=/opt/gopath/src/github.com/hyperledger/fabric/peer/organizations/peerOrganizations/farmacy.bcfm.com/peers/peer0.farmacy.bcfm.com/tls/ca.crt
+      - CORE_PEER_MSPCONFIGPATH=/opt/gopath/src/github.com/hyperledger/fabric/peer/organizations/peerOrganizations/farmacy.bcfm.com/users/Admin@farmacy.bcfm.com/msp
+    working_dir: /opt/gopath/src/github.com/hyperledger/fabric/peer
+    command: /bin/bash
+    volumes:
+      - /var/run/:/host/var/run/
+      - /home/ubuntu/BlockchainFarmManager/BCFM-UA/chaincode/:/opt/gopath/src/github.com/chaincode
+      - /home/ubuntu/BlockchainFarmManager/BCFM-UA/network/organizations:/opt/gopath/src/github.com/hyperledger/fabric/peer/organizations/
+      - /home/ubuntu/BlockchainFarmManager/BCFM-UA/network/scripts:/opt/gopath/src/github.com/hyperledger/fabric/peer/scripts/
+      - /home/ubuntu/BlockchainFarmManager/BCFM-UA/network/channel-artifacts:/opt/gopath/src/github.com/hyperledger/fabric/peer/channel-artifacts
+    networks:
+      bcfm:
+        aliases:
+          - clifarmacy.bcfm.com
+  
+  cliAgency:
+    container_name: cli
+    image: hyperledger/fabric-tools:2.3
+    tty: true
+    stdin_open: true
+    deploy:
+      placement:
+        constraints:
+          - node.labels.name == manager
+    environment:
+      - SYS_CHANNEL=system-channel
+      - GOPATH=/opt/gopath
+      - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
+      - FABRIC_LOGGING_SPEC=DEBUG
+      - ORDERER_CA=/opt/gopath/src/github.com/hyperledger/fabric/peer/organizations/ordererOrganizations/bcfm.com/orderers/orderer.bcfm.com/msp/tlscacerts/tlsca.bcfm.com-cert.pem
+      # - FABRIC_LOGGING_SPEC=INFO
+      - CC_PATH=/opt/gopath/src/github.com/chaincode
+      - CORE_VM_DOCKER_HOSTCONFIG_NETWORKMODE=bcfm
+      - CORE_PEER_ID=cli
+      - CORE_PEER_ADDRESS=peer0.agency.bcfm.com:14051
+      - CORE_PEER_LOCALMSPID=AgencyMSP
+      - CORE_PEER_TLS_ENABLED=true
+      - CORE_PEER_TLS_CERT_FILE=/opt/gopath/src/github.com/hyperledger/fabric/peer/organizations/peerOrganizations/agency.bcfm.com/peers/peer0.agency.bcfm.com/tls/server.crt
+      - CORE_PEER_TLS_KEY_FILE=/opt/gopath/src/github.com/hyperledger/fabric/peer/organizations/peerOrganizations/agency.bcfm.com/peers/peer0.agency.bcfm.com/tls/server.key
+      - CORE_PEER_TLS_ROOTCERT_FILE=/opt/gopath/src/github.com/hyperledger/fabric/peer/organizations/peerOrganizations/agency.bcfm.com/peers/peer0.agency.bcfm.com/tls/ca.crt
+      - CORE_PEER_MSPCONFIGPATH=/opt/gopath/src/github.com/hyperledger/fabric/peer/organizations/peerOrganizations/agency.bcfm.com/users/Admin@agency.bcfm.com/msp
+    working_dir: /opt/gopath/src/github.com/hyperledger/fabric/peer
+    command: /bin/bash
+    volumes:
+      - /var/run/:/host/var/run/
+      - /home/ubuntu/BlockchainFarmManager/BCFM-UA/chaincode/:/opt/gopath/src/github.com/chaincode
+      - /home/ubuntu/BlockchainFarmManager/BCFM-UA/network/organizations:/opt/gopath/src/github.com/hyperledger/fabric/peer/organizations/
+      - /home/ubuntu/BlockchainFarmManager/BCFM-UA/network/scripts:/opt/gopath/src/github.com/hyperledger/fabric/peer/scripts/
+      - /home/ubuntu/BlockchainFarmManager/BCFM-UA/network/channel-artifacts:/opt/gopath/src/github.com/hyperledger/fabric/peer/channel-artifacts
+    networks:
+      bcfm:
+        aliases:
+          - cliagency.bcfm.com
